--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,14 +78,9 @@ dependencies {
     implementation project(path: ':TellJokesLib')
     implementation project(path: ':jokeDisplayer')
     implementation project(path: ':backend', configuration: 'endpoints')
-/*
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-*/
 
-    // Testing-only dependencies
-    testImplementation 'junit:junit:4.12'
+
+    /*
     implementation 'com.android.support.test.espresso:espresso-idling-resource:2.2.2'
     androidTestImplementation 'com.android.support:support-annotations:25.2.0'
     androidTestImplementation ('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -94,8 +89,18 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-intents:2.2.2'
     androidTestImplementation 'com.android.support.test:rules:0.5'
     androidTestImplementation 'com.android.support.test:runner:0.5'
+    */
 
-    task optionalTask(dependsOn: [':backend:appengineStop',
+    // Testing-only dependencies
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.2'
+    androidTestImplementation 'com.android.support:support-annotations:27.1.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+
+    task optionalTask(dependsOn: [":backend:appengineStop",
                                   ":backend:appengineRun",
                                   ":app:connectedAndroidTest",
                                   ':backend:appengineStop']) {
